--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -26,7 +26,7 @@
       width: 100vw;
       height: 100vh;
       font-family: 'League Spartan', sans-serif;
-      background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
+      background-image: url(bg-pattern-top-desktop.svg), url(bg-pattern-bottom-desktop.svg);
       background-position: right 100% bottom 100%, right 0% bottom 0%;
       background-repeat: no-repeat;
     }
@@ -214,7 +214,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-image: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
+        background-image: url(bg-pattern-top-mobile.svg), url(bg-pattern-bottom-mobile.svg);
         background-repeat: no-repeat;
 
       }
@@ -312,31 +312,31 @@
       <div class="second">
         <div class="review">
           <div class="star">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
           </div>
           <p>Rated 5 Stars in Reviews</p>
         </div>
         <div class="report">
           <div class="star">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
           </div>
           <p>Rated 5 Stars in Report Guru</p>
         </div>
         <div class="besttech">
           <div class="star">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
-            <img src="images/icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
+            <img src="icon-star.svg" alt="Star Icon">
           </div>
           <p>Rated 5 Stars in BestTech</p>
         </div>
@@ -345,7 +345,7 @@
     <div class="patel">
       <div class="colton profile">
         <div class="bio">
-          <img src="images/image-colton.jpg" alt="Colton Smith Image">
+          <img src="image-colton.jpg" alt="Colton Smith Image">
           <div class="detail">
             <div class="name">Colton Smith</div>
             <div class="verify">Verified Buyer</div>
@@ -359,7 +359,7 @@
       </div>
       <div class="irene profile">
         <div class="bio">
-          <img src="images/image-irene.jpg" alt="Irene Roberts Image">
+          <img src="image-irene.jpg" alt="Irene Roberts Image">
           <div class="detail">
             <div class="name">Irene Roberts</div>
             <div class="verify">Verified Buyer</div>
@@ -372,7 +372,7 @@
       </div>
       <div class="anne profile">
         <div class="bio">
-          <img src="images/image-anne.jpg" alt="Anne Wallace Image">
+          <img src="image-anne.jpg" alt="Anne Wallace Image">
           <div class="detail">
             <div class="name">Anne Wallace</div>
             <div class="verify">Verified Buyer</div>
